examples/single-cluster/apps/argo-cd/envs/integration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-integration-ingress
spec:
  ingressClassName: k8s.io/integration
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: '/integration'
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
